--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,13 @@
       overflow: hidden;
       margin-left: -10%;
       margin-right: -10%;
+
   }
   .dice {
     padding: 150px;
     text-align: bottom;
-    color: purple;
-    font-size: 40px;
+    color: white;
+    font-size: 20px;
   }
     .play {
         margin-left: -10%;
@@ -39,3 +40,11 @@
         color:blue;
         opacity:0.7;
       }
+.well{
+  background-color: #056B79;
+  font-family: fantasy;
+  font-size: 40px;
+}
+.space{
+  text-align: right;
+}
