--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@
   background-color: #791105;
   font-family: fantasy;
   font-size: 40px;
+  color: black;
 }
 .space{
   text-align: right;
@@ -53,3 +54,4 @@
   text-align: center;
   text-decoration: underline;
 }
+.
